# claude-sentinel

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
Formula/: claude-sentinel.rb
alfred/: README.md  info.plist
alfred/scripts/: cst-do-switch.sh  cst-list-profiles.sh  cst-remaining.sh  cst-status.sh  cst-switch.sh
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/desktop/src-tauri/src/commands/: daemon.rs  mod.rs  profiles.rs  sessions.rs  stats.rs
apps/desktop/src/components/: AutoSwitchConfig.tsx  ProfileManager.tsx  SessionGrid.tsx  StatsPanel.tsx
apps/desktop/src/store/: daemon.ts  profiles.ts
apps/desktop/src/styles/: neubrutalism.css
crates/cst-cli/: Cargo.toml
crates/cst-cli/src/: main.rs
crates/cst-cli/src/commands/: auto_switch.rs  daemon.rs  doctor.rs  history.rs  mod.rs  pipeline.rs  profile.rs  quota.rs  run.rs  session.rs  shell.rs  stats.rs  switch_all.rs  sync.rs  team.rs
crates/cst-cli/src/tui/: mod.rs
crates/cst-cli/tests/: cli_integration.rs
crates/cst-core/: Cargo.toml
crates/cst-core/src/: auto_detect.rs  broadcast.rs  env_overlay.rs  history_parser.rs  hooks.rs  lib.rs  platform.rs  profile.rs  session.rs  shell.rs  team_sync.rs
crates/cst-core/src/auth/: apikey.rs  mod.rs  secrets.rs
crates/cst-core/src/auto_switch/: config.rs  daemon.rs  detector.rs  mod.rs  scheduler.rs  switch_log.rs
crates/cst-core/src/pipeline/: advance.rs  config.rs  mod.rs  notify.rs  state.rs  threshold.rs
docs/: ARCHITECTURE.md  AUTO-SWITCH.md  CONTRIBUTING.md  DESIGN.md  INSTALL.md  PIPELINE.md  USAGE.md  WINDOWS-INSTALLER.md
homebrew-tap/: README.md
scripts/: publish.sh
website/app/components/: AnnouncementBanner.tsx  Features.tsx  Hero.tsx  HowItWorks.tsx  Stats.tsx
wix/: License.rtf  main.wxs
