[workspace]
members = [
    "crates/cst-core",
    "crates/cst-cli",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["d-cryptic"]
license = "MIT"
repository = "https://github.com/d-cryptic/claude-sentinel"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "color", "suggestions"] }
clap_complete = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Filesystem & paths
dirs = "5"
notify = "7"
walkdir = "2"

# Credentials
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
aes-gcm = "0.10"
rand = "0.8"

# Platform
cfg-if = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC
interprocess = { version = "2", features = ["tokio"] }

# Utilities
which = "7"
glob = "0.3"
