[package]
name = "cst-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "claude-sentinel CLI — intelligent Claude Code account & profile manager"

[[bin]]
name = "cst"
path = "src/main.rs"

[dependencies]
cst-core = { path = "../cst-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
