[package]
name = "cst-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Claude Sentinel — intelligent Claude Code multi-account manager CLI"
keywords = ["claude", "cli", "profile-manager", "anthropic", "dev-tools"]
categories = ["command-line-utilities", "authentication"]
readme = "../../README.md"
documentation = "https://github.com/d-cryptic/claude-sentinel/blob/main/docs/USAGE.md"
homepage = "https://github.com/d-cryptic/claude-sentinel"
repository.workspace = true
default-run = "cst"

[[bin]]
name = "cst"
path = "src/main.rs"

[dependencies]
cst-core = { path = "../cst-core" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
license = false
eula = false

[dev-dependencies]
tempfile = "3"
