[package]
name = "cst-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Claude Sentinel — intelligent Claude Code account manager"
keywords = ["claude", "cli", "auth", "profile-manager", "anthropic"]
categories = ["command-line-utilities", "authentication", "config"]
readme = "../../README.md"
documentation = "https://docs.rs/cst-core"
homepage = "https://github.com/d-cryptic/claude-sentinel"
repository.workspace = true
exclude = ["/tests", "/.github"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
keyring = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
interprocess = { workspace = true }
which = { workspace = true }
glob = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
