[package]
name = "claude-sentinel-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Claude Sentinel desktop app — intelligent Claude Code account manager"

[lib]
name = "claude_sentinel_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-sentinel-app"
path = "src/main.rs"

[dependencies]
cst-core = { path = "../../../crates/cst-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
